corrected many layout issues

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -9075,3 +9075,7 @@ blockquote {
   top: 50px;
   right: 50px;
 }
+
+
+.university-title {
+  font-size: 50px; }
